--- a/source/R5T.T0060.Construction/R5T.T0060.Construction.csproj
+++ b/source/R5T.T0060.Construction/R5T.T0060.Construction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\R5T.T0060\R5T.T0060.csproj" />
   </ItemGroup>
